# ai-slide-agent

./: .gitignore  README.md  pyproject.toml
app/: chart_agent.py  graph.py  main.py  planner_agent.py  ppt_generator.py  validator.py
artifacts/: generated_deck.pptx  slide_plan.json
